# AggreGator_WS

./: How to use I2C-WiringPi For Odroid XU4.txt  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/shared_files/: Angle.h  Bucket.h  Drive.h  Ladder.h  ReadI2C.h  ReadI2CRegister.h  ReadI2CRegisterRequest.h  ReadI2CRegisterResponse.h  ReadI2CRequest.h  ReadI2CResponse.h  WriteI2C.h  WriteI2CRegister.h
devel/lib/keyboard_controller/: keyboard_controller_node
devel/lib/motor_drive/: motor_node
devel/lib/odroid_interface/: i2c_node  test_node
devel/lib/pkgconfig/: keyboard_controller.pc  motor_drive.pc  odroid_interface.pc  sensors.pc  shared_files.pc  xbox_controller.pc
devel/lib/python2.7/dist-packages/shared_files/msg/: _Angle.py  _Bucket.py  _Drive.py  _Ladder.py  _WriteI2C.py  _WriteI2CRegister.py  __init__.py
devel/lib/python2.7/dist-packages/shared_files/srv/: _ReadI2C.py  _ReadI2CRegister.py  __init__.py
devel/lib/sensors/: mpu_node
devel/lib/shared_files/: shared_files_node
devel/lib/xbox_controller/: xbox_controller_node
devel/share/common-lisp/ros/shared_files/msg/: Angle.lisp  Bucket.lisp  Drive.lisp  Ladder.lisp  WriteI2C.lisp  WriteI2CRegister.lisp  _package.lisp  _package_Angle.lisp  _package_Bucket.lisp  _package_Drive.lisp  _package_Ladder.lisp  _package_WriteI2C.lisp  _package_WriteI2CRegister.lisp  shared_files-msg.asd
devel/share/common-lisp/ros/shared_files/srv/: ReadI2C.lisp  ReadI2CRegister.lisp  _package.lisp  _package_ReadI2C.lisp  _package_ReadI2CRegister.lisp  shared_files-srv.asd
devel/share/keyboard_controller/cmake/: keyboard_controllerConfig.cmake
devel/share/motor_drive/cmake/: motor_driveConfig.cmake
devel/share/odroid_interface/cmake/: odroid_interfaceConfig.cmake
devel/share/sensors/cmake/: sensorsConfig.cmake
devel/share/shared_files/cmake/: shared_files-msg-paths.cmake  shared_filesConfig.cmake
devel/share/xbox_controller/cmake/: xbox_controllerConfig.cmake
src/: Laptop.sh  QuadCopter.sh  rosTestI2C.launch  startDefault.launch  startI2C.launch  startRC.launch
src/keyboard_controller/: CMakeLists.txt  package.xml
src/keyboard_controller/src/: keyboard_controller_node.cpp
src/motor_drive/: CMakeLists.txt  package.xml
src/motor_drive/src/: motor_node.cpp
src/odroid_interface/: CMakeLists.txt  package.xml
src/odroid_interface/include/odroid_interface/: i2c.cpp  i2c.h
src/odroid_interface/src/: i2c_node.cpp  test_node.cpp
src/sensors/: CMakeLists.txt  package.xml
src/sensors/src/: mpu_node.cpp
src/shared_files/: CMakeLists.txt  package.xml
src/shared_files/msg/: Angle.msg  Bucket.msg  Ladder.msg  WriteI2C.msg
src/shared_files/src/: shared_files_node.cpp
src/shared_files/srv/: ReadI2C.srv
src/xbox_controller/: CMakeLists.txt  package.xml
src/xbox_controller/src/: xbox_controller_node.cpp
